fixed issue with toasts not showing when triggered

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -182,6 +182,10 @@ seminar-detail-btn {
     height: 2px;
 }
 
+.btn-close {
+    float: right;
+}
+
  /* Media queries used to ensure responsiveness for images on seminars search page */
 
 @media screen and (max-width: 767px) {
